automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "['Palermo', 'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = None"
+    "la_boca = None\n",
+    "cneiug"
    ]
   },
   {
