automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,23 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Palermo', 'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca']"
+       "[None, 'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighborho= None\n",
-    "neighborhoods"
+    "neighborhoods[0]= None\n",
+    "neighborhoods[0]='Palermo'"
    ]
   },
   {
