automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,23 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None, 'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca']"
+       "['Palermo', 'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "neighborhoods[0]= None\n",
-    "neighborhoods[0]='Palermo'"
+    "neighborhoods[0]='Palermo'\n",
+    "neighborhoods"
    ]
   },
   {
