--- a/index.ipynb
+++ b/index.ipynb
@@ -135,23 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-34.6037, -58.3816]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ba_latitude = None\n",
-    "ba_l"
+    "ba_latitude=coordinates[0]\n",
+    "ba_"
    ]
   },
   {
