--- a/index.ipynb
+++ b/index.ipynb
@@ -135,13 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-34.6037"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ba_latitude = None\n",
     "ba_latitude=coordinates[0]\n",
-    "ba_"
+    "ba_latitude"
    ]
   },
   {
