automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = None\n",
+    "ba_longitude=coordinates[1]"
    ]
   },
   {
